--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,13 @@
             <systemPath>${basedir}/lib/ToolJar.jar</systemPath>
         </dependency>
 
+        <!---->
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.9.3</version>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
