--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,4 +1,4 @@
 spring.application.name=user-mucon
 spring.cloud.config.label=master
 spring.cloud.config.profile=dev
-spring.cloud.config.uri=http://192.168.1.14:2010/
+spring.cloud.config.uri=http://localhost:2010/
